--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -4,7 +4,7 @@
   {% csrf_token %}{{ form|crispy }}
   <p>
     Chưa có tài khoản?
-    <a href="{% url 'sign_up' %}">Hãy tạo tài khoản mới ở đây</a>!
+    <a href="{% url 'signup' %}">Hãy tạo tài khoản mới ở đây</a>!
   </p>
   <p>
     <button type="submit" class="btn btn-success">Đăng nhập</button>
