--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -35,10 +35,14 @@
           <ul class="navbar-nav">
             {% if user.is_authenticated %}
             {% if is_admin %}
-            <li class="nav-item">
-              <a class="nav-link text-danger fw-bold" href="{% url 'admin_booking_list' %}">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-danger fw-bold" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Quản Trị
               </a>
+              <ul class="dropdown-menu" aria-labelledby="adminDropdown">
+                <li><a class="dropdown-item" href="{% url 'admin_booking_list' %}">Đơn đặt sân</a></li>
+                <li><a class="dropdown-item" href="{% url 'admin_pitch_list' %}">Quản lý sân</a></li>
+              </ul>
             </li>
             {% endif %}
 
